1.shift navigation tabs left to work around the small devices issue 2.year in footer is automatically calculated by date(Y) function 3.enable favicon ico for the website 4.fix images links in index section

--- a/public_html/styles/general.css
+++ b/public_html/styles/general.css
@@ -52,6 +52,9 @@ a {
     margin: 0 auto;
 }
 
+.navigation-wrapper {
+    margin-right: 200px;
+}
 
 /* ---------------------------------Header------------------------------------- */
 
